fix(Radio): Align props with checkbox and more (#426)
* fix(Radio): Add fullWidth and directional props

* fix(Radio): Add icon style support and button placement

* fix(Radio): add disabled prop

* fix(Radio): attempt to resolve unit test error

* fix(Radio): Fix demo classname issue

* fix(Radio): line up classnames

* fix(Radio): Use classnames

--- a/react/Radio/Radio.demo.less
+++ b/react/Radio/Radio.demo.less
@@ -1,9 +1,7 @@
-.root {
-  display: flex;
-  flex-direction: column;
-  width: 175px;
+.root > :global(*) {
+  max-width: 350px;
+}
 
-  > :global(*) {
-    min-width: 150px; // :(
-  }
+.fullWidth {
+  width: 300px;
 }
